lib/misc/ace.h

      /*
       * long on Linux has a variable size depending on the underlying
       * architecture.
       */
      typedef unsigned int   UNSIGNED32;
      typedef int            SIGNED32;
      typedef unsigned long  UNSIGNED32;
      typedef long           SIGNED32;
   typedef unsigned short UNSIGNED16;
   typedef unsigned char  UNSIGNED8;
      typedef unsigned short WCHAR;
      typedef unsigned short WCHAR;
         // Long is 64 bits in GCC.
         typedef unsigned long  ADSHANDLE;
         typedef unsigned __int64  ADSHANDLE;
      typedef unsigned long  ADSHANDLE;
   typedef double         DOUBLE;
   typedef LONGLONG         SIGNED64;
         typedef __int64          SIGNED64;
   typedef long long int            SIGNED64;
UNSIGNED32 ENTRYPOINT AdsFindFirstTable( ADSHANDLE  hConnect,
                                         UNSIGNED8  *pucFileMask,
                                         UNSIGNED8  *pucFirstFile,
                                         UNSIGNED16 *pusFileLen,
                                         ADSHANDLE  *plHandle );
UNSIGNED32 ENTRYPOINT AdsFindNextTable( ADSHANDLE hConnect,
                                        ADSHANDLE lHandle,
                                        UNSIGNED8 *pucFileName,
                                        UNSIGNED16 *pusFileLen );
UNSIGNED32 ENTRYPOINT AdsFindFirstTable62( ADSHANDLE  hConnect,
                                           UNSIGNED8  *pucFileMask,
                                           UNSIGNED8  *pucFirstDD,
                                           UNSIGNED16 *pusDDLen,
                                           UNSIGNED8  *pucFirstFile,
                                           UNSIGNED16 *pusFileLen,
                                           ADSHANDLE  *plHandle );
UNSIGNED32 ENTRYPOINT AdsFindNextTable62( ADSHANDLE hConnect,
                                          ADSHANDLE lHandle,
                                          UNSIGNED8 *pucDDName,
                                          UNSIGNED16 *pusDDLen,
                                          UNSIGNED8 *pucFileName,
                                          UNSIGNED16 *pusFileLen );
UNSIGNED32 ENTRYPOINT AdsGetAllIndexes(
                              ADSHANDLE        hTable,
                              ADSHANDLE        ahIndex[],
                              UNSIGNED16       *pusArrayLen );
UNSIGNED32 ENTRYPOINT AdsGetFTSIndexes(
                              ADSHANDLE        hTable,
                              ADSHANDLE        ahIndex[],
                              UNSIGNED16       *pusArrayLen );
UNSIGNED32 ENTRYPOINT AdsGetFTSIndexInfo(
                              ADSHANDLE   hIndex,
                              UNSIGNED8   *pucOutput,
                              UNSIGNED32  *pulBufLen,
                              UNSIGNED8   **ppucField,
                              UNSIGNED32  *pulMinWordLen,
                              UNSIGNED32  *pulMaxWordLen,
                              UNSIGNED8   **ppucDelimiters,
                              UNSIGNED8   **ppucNoiseWords,
                              UNSIGNED8   **ppucDropChars,
                              UNSIGNED8   **ppucConditionalChars,
                              UNSIGNED8   **ppucReserved1,
                              UNSIGNED8   **ppucReserved2,
                              UNSIGNED32  *pulOptions );
UNSIGNED32 ENTRYPOINT AdsGetFTSIndexInfoW(
                              ADSHANDLE   hIndex,
                              WCHAR       *pwcOutput,
                              UNSIGNED32  *pulBufLen,
                              WCHAR       **ppwcField,
                              UNSIGNED32  *pulMinWordLen,
                              UNSIGNED32  *pulMaxWordLen,
                              WCHAR       **ppwcDelimiters,
                              WCHAR       **ppwcNoiseWords,
                              WCHAR       **ppwcDropChars,
                              WCHAR       **ppwcConditionalChars,
                              WCHAR       **ppwcReserved1,
                              WCHAR       **ppwcReserved2,
                              UNSIGNED32  *pulOptions );
UNSIGNED32 ENTRYPOINT AdsGetAllLocks(
                              ADSHANDLE        hTable,
                              UNSIGNED32       aulLocks[],
                              UNSIGNED16       *pusArrayLen );
UNSIGNED32 ENTRYPOINT AdsGetAllTables(
                              ADSHANDLE        ahTable[],
                              UNSIGNED16       *pusArrayLen );
UNSIGNED32 ENTRYPOINT AdsGetBinary(
                              ADSHANDLE        hTable,
                              UNSIGNED8        *pucFldName,
                              UNSIGNED32       ulOffset,
                              UNSIGNED8        *pucBuf,
                              UNSIGNED32       *pulLen );
UNSIGNED32 ENTRYPOINT AdsGetBinaryLength(
                              ADSHANDLE        hTable,
                              UNSIGNED8        *pucFldName,
                              UNSIGNED32       *pulLength );
UNSIGNED32 ENTRYPOINT AdsGetBookmark(
                              ADSHANDLE        hTable,
                              ADSHANDLE        *phBookmark );
UNSIGNED32 ENTRYPOINT AdsGetBookmark60(
                              ADSHANDLE        hObj,
                              UNSIGNED8        *pucBookmark,
                              UNSIGNED32       *pulLength );
UNSIGNED32 ENTRYPOINT AdsGetBookmarkLength(
                              ADSHANDLE        hObj,
                              UNSIGNED32       *pulLength );
UNSIGNED32 ENTRYPOINT AdsCompareBookmarks(
                              UNSIGNED8        *pucBookmark1,
                              UNSIGNED8        *pucBookmark2,
                              SIGNED32         *plResult );
UNSIGNED32 ENTRYPOINT AdsGetCollationLang(
                              UNSIGNED8  *pucLang,
                              UNSIGNED16 *pusLen );
UNSIGNED32 ENTRYPOINT AdsGetCollation(
                              ADSHANDLE  hConnect,
                              UNSIGNED8  *pucCollation,
                              UNSIGNED16 *pusLen );
UNSIGNED32 ENTRYPOINT AdsGetIntProperty(
                              ADSHANDLE  hObj,
                              UNSIGNED32 ulPropertyID,
                              UNSIGNED32 *pulProperty );
UNSIGNED32 ENTRYPOINT AdsGetConnectionType(
                              ADSHANDLE        hConnect,
                              UNSIGNED16       *pusConnectType );
UNSIGNED32 ENTRYPOINT AdsGetTransactionCount(
                              ADSHANDLE        hConnect,
                              UNSIGNED32       *pulTransactionCount );
UNSIGNED32 ENTRYPOINT AdsGetConnectionPath(
                              ADSHANDLE        hConnect,
                              UNSIGNED8        *pucConnectionPath,
                              UNSIGNED16       *pusLen );
UNSIGNED32 ENTRYPOINT AdsGetConnectionProperty(
                              ADSHANDLE        hConnect,
                              UNSIGNED16       usPropertyID,
                              VOID             *pvProperty,
                              UNSIGNED32       *pulPropertyLen );
UNSIGNED32 ENTRYPOINT AdsGetDate(
                              ADSHANDLE        hTable,
                              UNSIGNED8        *pucFldName,
                              UNSIGNED8        *pucBuf,
                              UNSIGNED16       *pusLen );
UNSIGNED32 ENTRYPOINT AdsGetDateFormat( UNSIGNED8  *pucFormat,
                                        UNSIGNED16 *pusLen );
UNSIGNED32 ENTRYPOINT AdsGetDateFormat60( ADSHANDLE  hConnect,
                                          UNSIGNED8  *pucFormat,
                                          UNSIGNED16 *pusLen );
UNSIGNED32 ENTRYPOINT AdsGetDecimals( UNSIGNED16 *pusDecimals );
UNSIGNED32 ENTRYPOINT AdsGetDefault(
                              UNSIGNED8        *pucDefault,
                              UNSIGNED16       *pusLen );
UNSIGNED32 ENTRYPOINT AdsGetDeleted( UNSIGNED16 *pbUseDeleted );
UNSIGNED32 ENTRYPOINT AdsGetDouble(
                              ADSHANDLE        hTable,
                              UNSIGNED8        *pucFldName,
                              DOUBLE           *pdValue );
UNSIGNED32 ENTRYPOINT AdsGetEpoch( UNSIGNED16 *pusCentury );
UNSIGNED32 ENTRYPOINT AdsGetErrorString(
                              UNSIGNED32       ulErrCode,
                              UNSIGNED8        *pucBuf,
                              UNSIGNED16       *pusBufLen );
UNSIGNED32 ENTRYPOINT AdsGetExact( UNSIGNED16 *pbExact );
UNSIGNED32 ENTRYPOINT AdsGetExact22(
                              ADSHANDLE        hObj,
                              UNSIGNED16       *pbExact );
UNSIGNED32 ENTRYPOINT AdsGetField(
                              ADSHANDLE        hTable,
                              UNSIGNED8        *pucFldName,
                              UNSIGNED8        *pucBuf,
                              UNSIGNED32       *pulLen,
                              UNSIGNED16       usOption );
UNSIGNED32 ENTRYPOINT AdsGetFieldW( ADSHANDLE       hObj,
                                    UNSIGNED8       *pucFldName,
                                    WCHAR           *pwcBuf,
                                    UNSIGNED32      *pulLen,
                                    UNSIGNED16      usOption );
UNSIGNED32 ENTRYPOINT AdsGetFieldDecimals(
                              ADSHANDLE        hTable,
                              UNSIGNED8        *pucFldName,
                              UNSIGNED16       *pusDecimals );
UNSIGNED32 ENTRYPOINT AdsGetFieldLength(
                              ADSHANDLE        hTable,
                              UNSIGNED8        *pucFldName,
                              UNSIGNED32       *pulLength );
UNSIGNED32 ENTRYPOINT AdsGetFieldName(
                              ADSHANDLE        hTable,
                              UNSIGNED16       usFld,
                              UNSIGNED8        *pucName,
                              UNSIGNED16       *pusBufLen );
UNSIGNED32 ENTRYPOINT AdsGetFieldNum(
                              ADSHANDLE        hTable,
                              UNSIGNED8        *pucFldName,
                              UNSIGNED16       *pusNum );
UNSIGNED32 ENTRYPOINT AdsGetFieldOffset(
                              ADSHANDLE        hTable,
                              UNSIGNED8        *pucFldName,
                              UNSIGNED32       *pulOffset );
UNSIGNED32 ENTRYPOINT AdsGetFieldType(
                              ADSHANDLE        hTable,
                              UNSIGNED8        *pucFldName,
                              UNSIGNED16       *pusType );
UNSIGNED32 ENTRYPOINT AdsGetFilter(
                              ADSHANDLE        hTable,
                              UNSIGNED8        *pucFilter,
                              UNSIGNED16       *pusLen );
UNSIGNED32 ENTRYPOINT AdsGetHandleLong(
                              ADSHANDLE        hObj,
                              UNSIGNED32       *pulVal );
UNSIGNED32 ENTRYPOINT AdsGetHandleType(
                              ADSHANDLE        hObj,
                              UNSIGNED16       *pusType );
   UNSIGNED32 ENTRYPOINT AdsRegisterProgressCallback(
         UNSIGNED32 (WINAPI *lpfnCallback)( UNSIGNED16 usPercent ) );
   UNSIGNED32 ENTRYPOINT AdsRegisterCallbackFunction(
         UNSIGNED32 (WINAPI *lpfnCallback)( UNSIGNED16 usPercent, UNSIGNED32 ulCallbackID ),
         UNSIGNED32 ulCallbackID );
   UNSIGNED32 ENTRYPOINT AdsRegisterCallbackFunction101(
         UNSIGNED32 (WINAPI *lpfnCallback)( UNSIGNED16 usPercent, SIGNED64 qCallbackID ),
         SIGNED64 qCallbackID );
   UNSIGNED32 ENTRYPOINT AdsRegisterSQLAbortFunc( UNSIGNED32 (WINAPI *lpfnCallback)(void) );
   UNSIGNED32 ENTRYPOINT AdsRegisterUDF( ADSHANDLE  hObj,
                                         UNSIGNED16 usType,
                                         UNSIGNED32 (WINAPI *lpfnUDF)(void) );