lib/misc/ace.pas


      function AdsFindFirstTable( hConnect: ADSHANDLE;
                                  pucFileMask: PAceChar;
                                  pucFirstFile: PAceChar;
                                  pusFileLen: PUNSIGNED16;
                                  plHandle: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsFindNextTable( hConnect: ADSHANDLE;
                                 lHandle: ADSHANDLE;
                                 pucFileName: PAceChar;
                                 pusFileLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsFindFirstTable62( hConnect: ADSHANDLE;
                                    pucFileMask: PAceChar;
                                    pucFirstDD: PAceChar;
                                    pusDDLen: PUNSIGNED16;
                                    pucFirstFile: PAceChar;
                                    pusFileLen: PUNSIGNED16;
                                    plHandle: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsFindNextTable62( hConnect: ADSHANDLE;
                                   lHandle: ADSHANDLE;
                                   pucDDName: PAceChar;
                                   pusDDLen: PUNSIGNED16;
                                   pucFileName: PAceChar;
                                   pusFileLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetAllIndexes( hTable: ADSHANDLE;
                                 ahIndex: PADSIndexArray;
                                 pusArrayLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetFTSIndexes( hTable: ADSHANDLE;
                                 ahIndex: PADSIndexArray;
                                 pusArrayLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetFTSIndexInfo( hIndex: ADSHANDLE;
                                   pucOutput: PAceChar;
                                   pulBufLen: PUNSIGNED32;
                                   ppucField: pPChar;
                                   pulMinWordLen: PUNSIGNED32;
                                   pulMaxWordLen: PUNSIGNED32;
                                   ppucDelimiters: pPChar;
                                   ppucNoiseWords: pPChar;
                                   ppucDropChars: pPChar;
                                   ppucConditionalChars: pPChar;
                                   ppucReserved1: pPChar;
                                   ppucReserved2: pPChar;
                                   pulOptions: PUNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetFTSIndexInfoW( hIndex: ADSHANDLE;
                                    pwcOutput: PWideChar;
                                    pulBufLen: PUNSIGNED32;
                                    ppwcField: pPWideChar;
                                    pulMinWordLen: PUNSIGNED32;
                                    pulMaxWordLen: PUNSIGNED32;
                                    ppwcDelimiters: pPWideChar;
                                    ppwcNoiseWords: pPWideChar;
                                    ppwcDropChars: pPWideChar;
                                    ppwcConditionalChars: pPWideChar;
                                    ppwcReserved1: pPWideChar;
                                    ppwcReserved2: pPWideChar;
                                    pulOptions: PUNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetAllLocks( hTable: ADSHANDLE;
                               aulLocks: pointer;
                               pusArrayLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetAllTables( ahTable: pointer;
                                pusArrayLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetBinary( hTable: ADSHANDLE;
                             pucFldName: PAceChar;
                             ulOffset: UNSIGNED32;
                             pucBuf: PAceBinary;
                             pulLen: PUNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetBinaryLength( hTable: ADSHANDLE;
                                   pucFldName: PAceChar;
                                   pulLength: PUNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetBookmark( hTable: ADSHANDLE;
                               phBookmark: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetBookmark60( hObj: ADSHANDLE;
                                 pucBookmark: PAceChar;
                                 pulLength: PUNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetBookmarkLength( hObj: ADSHANDLE;
                                     pulLength: PUNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsCompareBookmarks( pucBookmark1: PAceChar;
                                    pucBookmark2: PAceChar;
                                    plResult: pSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetCollationLang( pucLang: PAceChar;
                                    pusLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetCollation( hConnect: ADSHANDLE;
                                pucCollation: PAceChar;
                                pusLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetIntProperty( hObj: ADSHANDLE;
                                  ulPropertyID: UNSIGNED32;
                                  pulProperty: PUNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetConnectionType( hConnect: ADSHANDLE;
                                     pusConnectType: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetTransactionCount( hConnect: ADSHANDLE;
                                       pulTransactionCount: PUNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetConnectionPath( hConnect: ADSHANDLE;
                                     pucConnectionPath: PAceChar;
                                     pusLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetConnectionProperty( hConnect: ADSHANDLE;
                                         usPropertyID: UNSIGNED16;
                                         pvProperty: pointer;
                                         pulPropertyLen: PUNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetDate( hTable: ADSHANDLE;
                           pucFldName: PAceChar;
                           pucBuf: PAceChar;
                           pusLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetDateFormat( pucFormat: PAceChar;
                                 pusLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetDateFormat60( hConnect: ADSHANDLE;
                                   pucFormat: PAceChar;
                                   pusLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetDecimals( pusDecimals: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetDefault( pucDefault: PAceChar;
                              pusLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetDeleted( pbUseDeleted: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetDouble( hTable: ADSHANDLE;
                             pucFldName: PAceChar;
                             pdValue: pDOUBLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetEpoch( pusCentury: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetErrorString( ulErrCode: UNSIGNED32;
                                  pucBuf: PAceChar;
                                  pusBufLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetExact( pbExact: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetExact22( hObj: ADSHANDLE;
                              pbExact: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetField( hTable: ADSHANDLE;
                            pucFldName: PAceChar;
                            pucBuf: PAceChar;
                            pulLen: PUNSIGNED32;
                            usOption: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetFieldW( hObj: ADSHANDLE;
                             pucFldName: PAceChar;
                             pwcBuf: PWideChar;
                             pulLen: PUNSIGNED32;
                             usOption: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetFieldDecimals( hTable: ADSHANDLE;
                                    pucFldName: PAceChar;
                                    pusDecimals: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetFieldLength( hTable: ADSHANDLE;
                                  pucFldName: PAceChar;
                                  pulLength: PUNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetFieldName( hTable: ADSHANDLE;
                                usFld: UNSIGNED16;
                                pucName: PAceChar;
                                pusBufLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetFieldNum( hTable: ADSHANDLE;
                               pucFldName: PAceChar;
                               pusNum: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetFieldOffset( hTable: ADSHANDLE;
                                  pucFldName: PAceChar;
                                  pulOffset: PUNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetFieldType( hTable: ADSHANDLE;
                                pucFldName: PAceChar;
                                pusType: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetFilter( hTable: ADSHANDLE;
                             pucFilter: PAceChar;
                             pusLen: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetHandleLong( hObj: ADSHANDLE;
                                 pulVal: PUNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsGetHandleType( hObj: ADSHANDLE;
                                 pusType: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}
